--- a/backend/.prettierrc
+++ b/backend/.prettierrc
@@ -1,8 +1,8 @@
 {
-  "singleQuote": false,
-  "printWidth": 120,
-  "bracketSpacing": true,
-  "tabWidth": 2,
-  "trailingComma": "es5",
-  "semi": true
+    "singleQuote": true,
+    "printWidth": 120,
+    "bracketSpacing": true,
+    "tabWidth": 4,
+    "trailingComma": "es5",
+    "semi": true
 }
